--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -13,8 +13,8 @@
              id="username"
              required
             >
-                <!-- <div class="valid-feeedback"> Looks good!</div> -->
-        </div>
+                 <div class="valid-feeedback"> Looks good!</div> -->
+       </div>
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
             <input 
