--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -17,11 +17,12 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link" href="/listings/new">AirBnb your home</a>
           <% if(!currUser) { %>
-            <a class="nav-link" href="/signup"><b>SignUp</b></a>
-            <a class="nav-link" href="/login"><b>Login</b></a>
-          <%}%> <% if(currUser) { %>
-            <a class="nav-link" href="/logout"><b>Logout</b></a>
-          <%}%>  
+          <a class="nav-link" href="/signup"><b>Sign Up</b></a>
+          <a class="nav-link" href="/login"><b>Log In</b></a>
+          <% } %>
+          <% if(currUser) { %>
+          <a class="nav-link" href="/logout"><b>Log Out</b></a>
+          <% } %>
         </div>
       </div>
     </div>
