--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,4 @@
-00<% layout("/layouts/boilerplate") %> <%= success %>
+<% layout("/layouts/boilerplate") %> <%= success %>
 <body>
     <h3>All Listings</h3>
 
@@ -60,12 +60,7 @@
         </div>
 
 
-        <div class="tax-toggle">
-            <div class="form-check-reverse form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
-              </div>
-        </div>
+        
     </div>
 
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
