--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,7 +8,9 @@
     <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing.image">
         <div class="card-body">
-            <p class="card-text">Owned By <%= listing.owner.username %></p>                
+            <% if (listing.owner) { %>
+                <p class="card-text">Owned By <%= listing.owner.username %></p>
+            <% } %>
             <p class="card-text"><%= listing.description %></p>
             <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN") %></p>
             <p class="card-text"><%= listing.location %></p>
@@ -33,7 +35,7 @@
     <h4>Leave a Review</h4>
     <form  method="post" action="/listings/<%= listing._id %>/reviews" novalidate class="needs-validation">
         <div class="mb-3 mt-3">
-            <fieldset class="starability-basic">
+            <fieldset class="starability-slot">
                 <label for="rating" class="form-label">Rating</label>
                 <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
                 <input type="radio" id="first-rate1" name="review[rating]" value="1" />
@@ -56,7 +58,8 @@
             ></textarea>
             <div class="invalid-feedback">please add some comments for review</div>
         </div>
-        <button type="submit" class="btn btn-outline-dark">Submit</button>
+         
+    <button class="btn btn-outline-dark">Submit</button>
     </form>
 
     <br />
@@ -67,13 +70,12 @@
         <% for(review of listing.reviews) { %>
             <div class="card col-5 ms-3 mb-3">
                 <div class="card-body">
-                    <h5 class="card-title">Jane Doe</h5>
+                    <h5 class="card-title"><%= review.author.username %></h5>
                     <p class="card-text"><%= review.comment %></p>
-                    <p class="card-text"> Stars</p>
-                    <p class="starability-result card-text" data-rating="<%= review.rating %>"> Rated: 3 stars</p>
+                    <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
                 </div>
                 <form class="mb-3" method="POST" action="/listings/<%=listing._id%>/reviews/<%= review._id %>?_method=DELETE" >
-                    <button class="btn btn-sm btn-dark"></button>
+                    <button class="btn btn-sm btn-dark">Delete</button>
                 </form>
             </div>
         <% } %>
