--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -13,8 +13,8 @@
                 id="username"
                 required
                 >
-                <!-- <div class="valid-feeedback"> Looks good!</div> -->
-            </div>
+                 <div class="valid-feeedback"> Looks good!</div>
+           </div>
     <div class="mb-3">
     <label for="password" class="form-label">Password</label>
     <input 
