--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -44,17 +44,14 @@
         </div>
         <div class="navbar-nav ms-auto">
           <a class="nav-link" href="/listings/new">AirBnb your home</a>
-          <% if(!currUser) { %>
+          <% if(typeof currUser === 'undefined' || !currUser) { %>
           <a class="nav-link" href="/signup"><b>Sign Up</b></a>
           <a class="nav-link" href="/login"><b>Log In</b></a>
           <% } %>
-          <% if(currUser) { %>
+          <% if(typeof currUser !== 'undefined' && currUser) { %>
           <a class="nav-link" href="/logout"><b>Log Out</b></a>
           <% } %>
         </div>
-      </div>
-    </div>
-  </nav>
       </div>
     </div>
   </nav>
