--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -30,7 +30,7 @@
 
 
                     <div class="mb-3">
-                        <img src="<%=OriginalImageUrl%>">
+                        <img src="<%=originalImageUrl%>">
 
                     </div>
 
