--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,7 +13,9 @@
         <div class="card col-8 offset-2 show-card listing-card">
             <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing.image">
             <div class="card-body">             
+                <% if(listing.owner) { %>
                 <p class="card-text"><i>Owned by <%= listing.owner.username %></i></p>
+                <% } %>
                 <p class="card-text"><%= listing.description %></p>
                 <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN") %></p>
                 <p class="card-text"><%= listing.location %></p>
@@ -24,7 +26,7 @@
     </div>
 
 
-    <%if(currUser && currUser._id.equals(listing.owner._id)) {%>
+    <%if(currUser && listing.owner && currUser._id.equals(listing.owner._id)) {%>
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" 
             class="btn btn-dark col-1 offset-3 edit-btn">
